--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,9 +7,12 @@
     height: 100%;
     min-width: 320px;
     padding: 0.5rem 1rem;
-    background-color: var(--color-dark);
+    background-color: var(--color-header-background);
     user-select: none;
     overflow: hidden;
+    box-shadow:
+        0 2px 4px rgba(0, 0, 0, 0.2),
+        0 4px 12px rgba(0, 0, 0, 0.5);
     z-index: 999;
 }
 
@@ -41,22 +44,24 @@
     max-width: 550px;
     height: 40px;
     border-radius: 22.5px;
-    background-color: var(--color-black);
+    background-color: var(--color-background);
 }
 
 .header_search input {
     width: 100%;
     border: none;
     padding: 0.3rem 1rem;
+    font-size: 15px;
     font-weight: 500;
+    outline: none;
     border: 2px solid var(--color-primary);
     border-radius: 22.5px 0 0 22.5px;
-    color: var(--color-text);
+    color: var(--color-text-primary);
     background-color: transparent;
 }
 
 .header_search input:focus {
-    outline: 2px;
+    border: 3px solid var(--color-primary);
 }
 
 .header_search button {
@@ -64,12 +69,11 @@
     align-items: center;
     justify-content: center;
     width: 60px;
+    padding-right: 5px;
     border: none;
     border-radius: 0 22.5px 22.5px 0;
-}
-
-.header_search input:focus {
-    outline: none;
+    color: var(--color-text-primary);
+    background-color: var(--color-primary);
 }
 
 .header_right {
