--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,11 +3,14 @@
     margin-bottom: 1rem;
     font-family: var(--font-primary);
     border-radius: 0.75rem;
-    background-color: white;
     user-select: none;
     overflow: hidden;
     cursor: pointer;
     box-shadow: 0px 0px 7px #666;
+}
+
+.product:hover {
+    box-shadow: 0px 0px 7px var(--color-primary);
 }
 
 .product_image {
@@ -15,26 +18,31 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    min-height: 250px;
-    background-color: #00000080;
+    min-height: 400px;
+    background-color: transparent;
 }
 
 .product_image img {
     width: 100%;
     height: 100%;
+    max-height: 400px;
 }
 
 .product_info {
     display: flex;
     flex-direction: column;
     padding: 0.75rem;
+    background-color: rgba(255, 255, 255, 0.75);
     gap: 0.25rem;
 }
 
 .product_name {
     display: -webkit-box;
+    line-clamp: 2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    line-height: 1.5em;
+    min-height: 3em;
     font-size: 18px;
     overflow: hidden;
 }
